2020-0622 新增 flex grid

--- a/mp_template.htm
+++ b/mp_template.htm
@@ -148,6 +148,188 @@
             <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <!-- 任何一個section下一層都要包下一層都要包div container作對齊 -->
             <!-- //// class 都可以隨意命名 !!! ///// -->
+            <!-- flex start -->
+            <!-- flex mixin -->
+            <section class="Flex Reverse">
+                <div class="container">
+                    <div class="col">
+                        <h3>左欄標題</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <!-- <div class="col">
+                        <h3>右欄標題</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div> -->
+                </div>
+            </section>
+            <section class="Flex">
+                <div class="container">
+                    <div class="col">
+                        <h3>左欄標題</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>右欄標題</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                </div>
+            </section>
+            <section class="Flex">
+                <div class="container">
+                    <div class="left">
+                        <h3>left</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="right">
+                        <h3>right</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                </div>
+            </section>
+            <section class="Flex">
+                <div class="container">
+                    <div class="thumbnail">
+                        <h3>flex</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim minima nobis dicta eum laudantium vitae, laboriosam, minus accusamus dolorum voluptatem, inventore recusandae pariatur unde placeat aut odit ducimus labore similique.</p>
+                    </div>
+                    <div class="thumbnail">
+                        <h3>flex</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus tempora reiciendis totam, voluptatem eum. Repellendus tempora est quibusdam magni aliquid quidem doloribus id excepturi laboriosam quo, repudiandae, enim explicabo necessitatibus?</p>
+                    </div>
+                    <div class="thumbnail">
+                        <h3>flex</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis numquam dolor obcaecati accusamus, maxime eius distinctio ipsa soluta nam iste quis! Cupiditate odio vitae quos laudantium dolore repudiandae, corrupti adipisci!</p>
+                    </div>
+                </div>
+            </section>
+            <section class="Flex">
+                <div class="container">
+                    <div class="thumbnail">
+                        <a href="#">
+                            <div class="img-container">
+                                <picture>
+                                    <source media="(min-width: 1200px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 992px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 576px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(max-width: 575px)" data-srcset="images/demo/01.jpg">
+                                    <img data-src="images/demo/01.jpg" class="lazy">
+                                    <noscript><img src="images/demo/01.jpg"></noscript>
+                                </picture>
+                            </div>
+                        </a>
+                        <div class="caption">
+                            <time>2018-01-01</time>
+                            <h3>標題標題</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio temporibus dolor repellendus unde, rem ducimus aut cupiditate amet beatae minus repellat laboriosam reiciendis libero dolorem quo, recusandae deserunt, omnis qui?</p>   
+                        </div>
+                    </div>
+                    <div class="thumbnail">
+                        <a href="#">
+                            <div class="img-container">
+                                <picture>
+                                    <source media="(min-width: 1200px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 992px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 576px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(max-width: 575px)" data-srcset="images/demo/01.jpg">
+                                    <img data-src="images/demo/01.jpg" class="lazy">
+                                    <noscript><img src="images/demo/01.jpg"></noscript>
+                                </picture>
+                            </div>
+                        </a>
+                        <div class="caption">
+                            <time>2018-01-01</time>
+                            <h3>標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio temporibus dolor repellendus unde, rem ducimus aut cupiditate amet beatae minus repellat laboriosam reiciendis libero dolorem quo, recusandae deserunt, omnis qui?</p>   
+                        </div>
+                    </div>
+                    <div class="thumbnail">
+                        <a href="#">
+                            <div class="img-container">
+                                <picture>
+                                    <source media="(min-width: 1200px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 992px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 576px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(max-width: 575px)" data-srcset="images/demo/01.jpg">
+                                    <img data-src="images/demo/01.jpg" class="lazy">
+                                    <noscript><img src="images/demo/01.jpg"></noscript>
+                                </picture>
+                            </div>
+                        </a>
+                        <div class="caption">
+                            <time>2018-01-01</time>
+                            <h3>標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題標題</h3>
+                        </div>
+                    </div>
+                    <div class="thumbnail">
+                        <a href="#">
+                            <div class="img-container">
+                                <picture>
+                                    <source media="(min-width: 1200px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 992px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(min-width: 576px)" data-srcset="images/demo/01.jpg">
+                                    <source media="(max-width: 575px)" data-srcset="images/demo/01.jpg">
+                                    <img data-src="images/demo/01.jpg" class="lazy">
+                                    <noscript><img src="images/demo/01.jpg"></noscript>
+                                </picture>
+                            </div>
+                        </a>
+                        <div class="caption">
+                            <time>2018-01-01</time>
+                            <h3>標題</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio temporibus dolor repellendus unde, rem ducimus aut cupiditate amet beatae minus repellat laboriosam reiciendis libero dolorem quo, recusandae deserunt, omnis qui?</p>   
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="Flex spacial">
+                <div class="container">
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                </div>
+            </section>
+            <section class="Flex spacial2">
+                <div class="container">
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                    <div class="col">
+                        <h3>title</h3>
+                        <p>col Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores nihil, quaerat consequuntur quas quam possimus eveniet? Cumque nemo obcaecati perferendis error, atque officiis officia magni unde repudiandae, quos similique?</p>
+                    </div>
+                </div>
+            </section>
+            <!-- flex end -->
             <section class="demosection col-12 full">
                 <div class="container">
                     <div class="col"> 1欄滿版 </div>
