--- a/qp_template.htm
+++ b/qp_template.htm
@@ -164,7 +164,7 @@
                         <li class="icon_back"><a href="#">回上一頁</a></li>
                         <li class="icon_print"><a href="#">友善列印</a></li>
                         <li class="icon_forward"><a href="#">轉寄友人</a></li>
-                    </ul>
+                     </ul>
                 </div>
                 <!-- QP Start -->
                 <section class="qp">
@@ -189,34 +189,30 @@
                             </div>
                         </div>
                         <div class="form_grp">
-                            <fieldset>
-                                <legend class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</legend>
-                                <div class="form_content">
-                                    <div class="radio_grp form_inline">
-                                        <label>
-                                            <input type="radio" name="sampleRadio5" value="" checked="">類別1</label>
-                                        <label>
-                                            <input type="radio" name="sampleRadio5" value="">類別2</label>
-                                        <label>
-                                            <input type="radio" name="sampleRadio5" value="">類別3</label>
-                                    </div>
+                            <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                            <div class="form_content">
+                                <div class="radio_grp form_inline">
+                                    <label>
+                                        <input type="radio" name="sampleRadio5" value="" checked="">類別1</label>
+                                    <label>
+                                        <input type="radio" name="sampleRadio5" value="">類別2</label>
+                                    <label>
+                                        <input type="radio" name="sampleRadio5" value="">類別3</label>
                                 </div>
-                            </fieldset>
+                            </div>
                         </div>
                         <div class="form_grp">
-                            <fieldset>
-                                <legend class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</legend>
-                                <div class="form_content">
-                                    <div class="check_grp form_inline">
-                                        <label>
-                                            <input type="checkbox" name="" value="" checked="">類別1</label>
-                                        <label>
-                                            <input type="checkbox" name="" value="">類別2</label>
-                                        <label>
-                                            <input type="checkbox" name="" value="">類別3</label>
-                                    </div>
+                            <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                            <div class="form_content">
+                                <div class="check_grp form_inline">
+                                    <label>
+                                        <input type="checkbox" name="" value="" checked="">類別1</label>
+                                    <label>
+                                        <input type="checkbox" name="" value="">類別2</label>
+                                    <label>
+                                        <input type="checkbox" name="" value="">類別3</label>
                                 </div>
-                            </fieldset>
+                            </div>
                         </div>
                         <div class="form_grp">
                             <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>內容：</label>
