20200804 修改flex css及回饋單問題

--- a/form.htm
+++ b/form.htm
@@ -203,9 +203,9 @@
                                 <input name="password" type="password">
                             </div>
                         </div>
-                        <div class="form_grp">
+                        <div class="form_grp" role="group" aria-labelledby="fake-legend">
                             <label for="" class="form_title">活動地點</label>
-                            <div class="form_content">
+                            <div class="form_content" id="fake-legend">
                                 <div class="radio_grp form_inline">
                                     <label>
                                         <input type="radio" name="sampleRadio5" value="" checked="">新北市</label>
@@ -230,9 +230,9 @@
                                 <textarea name="" id="address" cols="30" rows="10"></textarea>
                             </div>
                         </div>
-                        <div class="form_grp">
+                        <div class="form_grp" role="group" aria-labelledby="fake-legend">
                             <label class="form_title">活動地點</label>
-                            <div class="form_content">
+                            <div class="form_content" id="fake-legend">
                                 <div class="check_grp form_inline">
                                     <label>
                                         <input type="checkbox" name="" value="" checked="">全部</label>
@@ -262,9 +262,9 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form_grp">
+                        <div class="form_grp" role="group" aria-labelledby="fake-legend">
                             <label class="form_title">是否售票</label>
-                            <div class="form_content">
+                            <div class="form_content" id="fake-legend">
                                 <div class="radio_grp form_inline">
                                     <label>
                                         <input type="radio" name="sampleRadio6" value="" checked="">售票</label>
@@ -290,9 +290,9 @@
                                         <input name="" type="text" value="">
                                     </div>
                                 </div>
-                                <div class="form_grp">
+                                <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                     <label class="form_title">性別<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr></label>
-                                    <div class="form_content">
+                                    <div class="form_content" id="fake-legend">
                                         <div class="radio_grp form_inline">
                                             <label>
                                                 <input type="radio" name="sampleRadio5" value="" checked="">男</label>
@@ -439,9 +439,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form_grp">
+                                <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                     <label class="form_title">參加場次</label>
-                                    <div class="form_content">
+                                    <div class="form_content" id="fake-legend">
                                         <div class="check_grp form_inline">
                                             <label>
                                                 <input type="checkbox" name="" value="" checked="">全部</label>
@@ -456,9 +456,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form_grp">
+                                <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                     <label class="form_title">參加場次</label>
-                                    <div class="form_content">
+                                    <div class="form_content" id="fake-legend">
                                         <div class="check_grp">
                                             <label>
                                                 <input type="checkbox" name="" value="" checked="">全部</label>
@@ -473,9 +473,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form_grp">
+                                <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                     <legend class="form_title">是否售票</legend>
-                                    <div class="form_content">
+                                    <div class="form_content" id="fake-legend">
                                         <div class="radio_grp form_inline">
                                             <label>
                                                 <input type="radio" name="sampleRadio6" value="" checked="">售票</label>
@@ -486,9 +486,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form_grp">
+                                <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                     <label class="form_title">是否售票</label>
-                                    <div class="form_content">
+                                    <div class="form_content" id="fake-legend">
                                         <div class="radio_grp">
                                             <label>
                                                 <input type="radio" name="sampleRadio6" value="" checked="">售票</label>
@@ -631,7 +631,7 @@
     </div>
     <a href="javascript:;" class="scrollToTop">回頁首</a>
     <!-- JQ -->
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <!-- 外掛 plugin js -->
     <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
     <script src="vendor/slick/slick.min.js "></script><!-- slick -->
