--- a/np_template.htm
+++ b/np_template.htm
@@ -173,7 +173,7 @@
                         <li><a href="#"><span class="num">2</span>節點2</a></li>
                         <li><a href="#"><span class="num">3</span>節點3</a></li>
                         <li><a href="#"><span class="num">4</span>節點4</a></li>
-                        <li><a href="#"><span class="num">5</span>節點5</a></li>
+                        <li><a href="#"><span class="num">5</span>節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5</a></li>
                         <li><a href="#"><span class="num">6</span>節點6</a></li>
                         <li><a href="#"><span class="num">7</span>節點7</a></li>
                         <li><a href="#"><span class="num">8</span>節點8</a></li>
@@ -284,7 +284,7 @@
     </div>
     <a href="javascript:;" class="scrollToTop">回頁首</a>
     <!-- JQ -->
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <!-- 外掛 plugin js -->
     <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
     <script src="vendor/slick/slick.min.js "></script><!-- slick -->
