--- a/qp_template.htm
+++ b/qp_template.htm
@@ -169,7 +169,7 @@
                 <!-- QP Start -->
                 <section class="qp">
                     <p>註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>為必填(選)欄位, 不能為空白。</p>
-                    <form action="" class="form_grid">
+                    <form action="" class="form_grid flex-form">
                         <div class="form_grp">
                             <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的真實姓名：</label>
                             <div class="form_content">
@@ -346,7 +346,7 @@
     </div>
     <a href="javascript:;" class="scrollToTop">回頁首</a>
     <!-- JQ -->
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <!-- 外掛 plugin js -->
     <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
     <script src="vendor/slick/slick.min.js "></script><!-- slick -->
