--- a/index.htm
+++ b/index.htm
@@ -138,6 +138,11 @@ tbody tr td:nth-child(2) {
                     </tr>
                     <tr>
                         <td></td>
+                        <td>表單</td>
+                        <td><a href="form.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>網站地圖</td>
                         <td><a href="sitemap_template.htm"></a></td>
                     </tr>
@@ -179,7 +184,7 @@ tbody tr td:nth-child(2) {
         </div>
     </div>
     <a href="javascript:;" class="scrollToTop" >回頁首</a>
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="vendor/jquery.easing.min.js"></script>
     <script src="js/hyui.js"></script>
     <script src="js/customize.js"></script>
