--- a/lp_album_template.htm
+++ b/lp_album_template.htm
@@ -202,7 +202,7 @@
                                     </div>
                                     <div class="caption">
                                         <time>2018-01-01</time>
-                                        <h3>相簿標題</h3>
+                                        <h3>相簿標題相簿標題相簿標題相簿標題相簿標題</h3>
                                     </div>
                                 </a>
                             </div>
@@ -558,7 +558,7 @@
     </div>
     <a href="javascript:;" class="scrollToTop">回頁首</a>
     <!-- JQ -->
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <!-- 外掛 plugin js -->
     <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
     <script src="vendor/slick/slick.min.js "></script><!-- slick -->
