--- a/mp_template.htm
+++ b/mp_template.htm
@@ -189,6 +189,72 @@
                     </div>
                 </div>
             </section>
+            <section class="customize-free4">
+                <div class="container">
+                    <h2>主標題 customize free4</h2>
+                    <div class="Flex-set">
+                        <div class="left">
+                            <h3>左欄 6</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="right">
+                            <h3>右欄 6</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>下欄 1</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>下欄 2</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>下欄 3</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="customize-free5">
+                <div class="container">
+                    <h2>主標題 customize free5</h2>
+                    <div class="Flex-set">
+                        <div class="left">
+                            <h3>左欄 7</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="right">
+                            <h3>右欄 7</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- 1、 -->
+            <section class="customize-1">
+                <div class="container">
+                    <h2>主標題：customize-1</h2>
+                    <div class="Flex-set">
+                        <div class="col">
+                            <h3>title 1</h3>
+                            <p>col Lorem ipsum dolor sit amet, quos similique?</p>
+                        </div>
+                        <div class="col">
+                            <h3>title 2</h3>
+                            <p>col Lorem ipsum dolor sit</p>
+                        </div>
+                        <div class="col">
+                            <h3>title 3</h3>
+                            <p>col Lorem ipsum dolor sit amet, quos similique?</p>
+                        </div>
+                        <div class="col">
+                            <h3>title 4</h3>
+                            <p>col Lorem ipsum dolor sit amet, quos similique?</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- 2、 -->
             <section class="customize-2">
                 <div class="container">
@@ -246,6 +312,7 @@
                             <h3>title 13</h3>
                             <p>col Lorem ipsum dolor sit amet, quos similique?</p>
                         </div>
+                    </div>
                 </div>
             </section>
             <!-- 3、 -->
